test/FAIL/assertcmd/to_many_arguments/06_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

assert byte 0x13 0x14 +0x2
